8 files modified, 7 added

--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,11 @@
 span div{
   width: 100%
 }
+
+.infoBox table{
+  border: 1px solid;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
