--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,13 @@
 span div{
   width: 100%
 }
-
+.navBtn button{
+  padding: .1em 5em;
+  border: 1px solid #cccccc;
+  margin-left: .5em;
+  font-size: .2em;
+  float: right;
+}
 .infoBox table{
   border: 1px solid;
   margin-left: 5px;
