--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,8 @@ span div{
 .navBtn button{
   padding: .1em 5em;
   border: 1px solid #cccccc;
-  margin-left: .5em;
-  font-size: .2em;
+  margin-right: .5em;
+  font-size: .1em;
   float: right;
 }
 .infoBox table{
